--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gluestack/ui-next-adapter": "^2.1.12",
+    "@repo/context": "*",
     "@repo/ui": "*",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10",
-    "@repo/context": "*"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
