--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@repo/ui",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch",
     "clean": "rm -rf dist"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
+    }
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
@@ -16,6 +22,21 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-native": "0.76.9"
+    "jscodeshift": "0.15.2",
+    "react-native": "0.76.9",
+    "react-native-css-interop": "^0.1.22",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-svg": "15.2.0",
+    "tailwindcss": "3.4.17",
+    "@gluestack-ui/button": "^1.0.14",
+    "@gluestack-ui/icon": "^0.1.27",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/toast": "^1.0.9",
+    "gluestack-ui": "^0.7.22",
+    "nativewind": "^4.1.23"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
