--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,8 @@
     "shadcn": "^2.10.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
